Fix z-index problem of floating buttons

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -907,10 +907,13 @@ ajax-loading-indicator-small {
   background-color: #f5f5f5;
 }
 
+.top-actions-placeholder {
+  z-index: 1000;
+}
+
 .top-actions {
   @include clearfix;
 
-  z-index: 1000;
   padding: 10px 10px 10px 10px;
 
   p.button-label {
